--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,4 +13,5 @@ install:
   - java -jar ./api-ci/rest/artifacts/app-mbank.jar &
 
 build_script:
+  - chmod +x gradlew
   - ./api-ci/rest/gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
